<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.DetailActivity">

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/location_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/baluran"
        />

    <TextView
        android:id="@+id/tv_destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_image"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/destination"
        android:textSize="24sp"
        android:layout_marginVertical="16dp"
        android:layout_marginStart="16dp"
        />

    <ImageView
        android:id="@+id/iv_location_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_destination"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginVertical="8dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_location_pin"
        android:contentDescription="@string/location_pin" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/iv_location_pin"
        app:layout_constraintTop_toTopOf="@id/iv_location_pin"
        app:layout_constraintBottom_toBottomOf="@id/iv_location_pin"
        android:layout_marginStart="8dp"
        android:text="@string/location"
        android:textSize="16sp"
        android:textColor="@color/material_dynamic_neutral60"
        />

    <ImageView
        android:id="@+id/iv_star_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/tv_rating"
        app:layout_constraintTop_toTopOf="@id/tv_destination"
        app:layout_constraintBottom_toBottomOf="@id/iv_location_pin"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_star_rate"
        />

    <TextView
        android:id="@+id/tv_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/iv_star_rate"
        app:layout_constraintBottom_toBottomOf="@id/iv_star_rate"
        app:layout_constraintStart_toStartOf="@id/iv_star_rate"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/rating"
        android:textSize="24sp"
        />
    
    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_location_pin"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginVertical="24dp"
        android:layout_marginStart="16dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="@string/price"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:justificationMode="inter_word"
        android:text="@string/description"
        />

</androidx.constraintlayout.widget.ConstraintLayout>