<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="8dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="220dp">

        <ImageView
            android:id="@+id/img_destination_photo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            tools:src="@drawable/banda_neira" />

        <TextView
            android:id="@+id/tv_destination_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:background="#4D000000"
            android:drawableStart="@drawable/ic_star_rate"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            tools:text="@string/rating"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/white"
            android:paddingHorizontal="16dp"
            android:paddingVertical="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_destination_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                tools:text="@string/destination"
                android:textStyle="bold"
                android:ellipsize="end"
                android:inputType="none"
                android:maxLines="2"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_destination_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:textColor="@color/black"
                android:ellipsize="end"
                android:inputType="none"
                android:maxLines="2"
                tools:text="@string/location"
                android:textSize="12sp" />

        </LinearLayout>

    </FrameLayout>
</androidx.cardview.widget.CardView>